# pang-agent

./: .env.example  .gitignore  AGENTS.md  Agent 意图识别与追问澄清机制：生产级工程化完全指南.md  README.md  pyproject.toml  关于Agent开发规范.md
alembic/: env.py  script.py.mako
alembic/versions/: b84a3e2df80c_add_conversations.py
app/: main.py
app/agent/: __init__.py  events.py  executor.py  factory.py  graph.py  llm.py  prompt.py  registry.py  schema.py  state.py
app/agent/chat/: state.py  (+2 more)
app/api/: agent.py  conversations.py  health.py  router.py  users.py
app/application/: __init__.py  chat_service.py  conversation_service.py  factory.py
app/config/: __init__.py  config.py
app/container/: __init__.py  ai.py  infra.py
app/core/: database.py  exceptions.py  logging.py  response.py  security.py  validation.py
app/models/: __init__.py  conversation.py
app/presentation/: __init__.py  sse.py
app/repositories/: conversation_repo.py
app/schemas/: common.py  conversation.py  user.py
doc/: 2026-07-08-Agent架构设计.md
docs/: ARCHITECTURE.md  Agent聊天记录设计.md  HANDOFF.md  LangGraph_State_设计笔记.md  PROJECT_RECORD.md  graph代码架构规范.md  关于SSE调研.md  关于agent代码架构.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  types.ts
tests/: test_agent_graph.py  test_agent_invoke.py  test_agent_stream.py  test_auth_stub.py  test_chat_service_history.py  test_conversation_models.py  test_conversation_service.py  test_conversations_api.py  test_database.py  test_exceptions.py  test_health.py  test_infra.py  test_llm_client.py  test_prompt.py
(+7 files in other folders)
