[project]
name = "pang-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "langsmith>=0.9.7",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
