[project]
name = "pang-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.8",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langsmith>=0.9.7",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.51",
    "sse-starlette>=3.4.5",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
